Assembler/tests/optimizations/vectorized.asm
vaddm 100, s42,c42,c142
addci s0, s43, 9
